--- a/json-backend/package.json
+++ b/json-backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "skillswap-json-backend",
   "version": "1.0.0",
+  "description": "JSON Server backend for SkillSwap",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server --host 0.0.0.0 --watch db.json --port $PORT"
+    "start": "node server.js"
   },
   "dependencies": {
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.4"
   }
 }
