--- a/json-backend/package.json
+++ b/json-backend/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "cors": "^2.8.5"
   }
 }
+
